--- a/WeatherZone/src/Styles/Home.scss
+++ b/WeatherZone/src/Styles/Home.scss
@@ -9,7 +9,7 @@ html {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background-image: url("../assets/Homebackground.jpg"); /* Adjust path as necessary */
+  background-image: url("../assets/Homebackground.jpg");
   background-size: cover;
   background-position: center;
   box-sizing: border-box;
